--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ activity = "1.9.0"
 constraintlayout = "2.1.4"
 gson = "2.11.0"
 apollo = "3.8.4"
+hilt = "2.48"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -23,6 +24,7 @@ androidx-activity = { group = "androidx.activity", name = "activity", version.re
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 gson = {group = "com.google.code.gson", name = "gson", version.ref = "gson"}
 apollo = { group = "com.apollographql.apollo3", name = "apollo-runtime", version.ref = "apollo"}
+hilt = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
